# locust-cache-benchmark

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-monitoring.yml  docker-compose-redis-standalone-auth.yml  docker-compose-redis-standalone.yml  docker-compose-valkey-standalone.yml  docker-compose-valkey.yml  pyproject.toml
.github/workflows/: deploy.yaml  e2etest.yaml
cache_benchmark/: requirements.txt
cache_benchmark/src/cache_benchmark/: args.py  cash_connect.py  config.py  locust_cache.py  log_setup.py  main.py  otel_setup.py  scenario.py  utils.py
cache_benchmark/tests/: test_cash_connect.py  test_config.py  test_e2e_error_trace.py  test_e2e_yaml_config.py  test_locust_cache.py  test_main.py  test_otel_setup.py  test_utils.py
cache_benchmark/tests/fixtures/: e2e_cli_conflict.yaml  e2e_env_override.yaml  e2e_init.yaml  e2e_invalid_schema.yaml  e2e_loadtest.yaml
monitoring/: init-grafana.sh  prometheus.yml
monitoring/dashboards/: redis-cache-performance-dashboard.json  redis-connections-dashboard.json
sample-manifest/: job.yaml
